--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Django
-mysqlclient
-mysql-connector-python
-ibm-cloud-sdk-core
-ibm-watson-machine-learning
-ibm-cos-sdk
+Django==4.2.3
+mysqlclient==2.1.1
+mysql-connector-python==8.0.33
+ibm-cloud-sdk-core==3.15.0
+ibm-watson-machine-learning==1.0.0
+ibm-cos-sdk==2.12.0
 
