--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==4.2.3
-mysqlclient==2.1.1
-mysql-connector-python==8.0.33
+ibm-db-django 1.5.3.0
+#mysqlclient==2.1.1
+#mysql-connector-python==8.0.33
 ibm-cloud-sdk-core==3.15.0
 ibm-watson-machine-learning==1.0.360
 ibm-cos-sdk==2.12.0
