--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Django==4.2.3
-ibm-db-django 1.5.3.0
+ibm-db-django==1.5.3.0
 #mysqlclient==2.1.1
 #mysql-connector-python==8.0.33
 ibm-cloud-sdk-core==3.15.0
